--- a/css/estilo.css
+++ b/css/estilo.css
@@ -38,7 +38,9 @@ footer {
 }
 
 header {
-    background: #F4B3AF;
+    background: #ee9ca7;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #ffdde1, #F4B3AF);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #ffdde1, #F4B3AF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     width:100%;
     height: 100px;
     display:flex;
@@ -104,7 +106,9 @@ header {
 }
 
 footer {
-    background-color: #A4C2A5;
+    background: #1f4037;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #99f2c8, #1f4037);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #99f2c8, #1f4037); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     width:100%;
     height: 250px;
     display:flex;
@@ -587,6 +591,7 @@ h4 {
         ;
         ;
     }
+    
 }
 
 
@@ -632,4 +637,15 @@ h4 {
         ;
         ;
     }
+}
+
+.botonCompra  {
+    transition: all;
+}
+
+.botonCompra:hover {
+    height:70px;
+    width:250px;
+
+
 }
